force-app/main/default/objects/LAN_Mapping__c/LAN_Mapping__c.object-meta.xml
<CustomObject>
    <label>LAN Mapping</label>
    <nameField>
        <displayFormat>LAN-{0000000000}</displayFormat>
        <label>LAN Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAN Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>