force-app/main/default/objects/LAN_Mapping__c/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <description>This field is used to store the type of Applicant</description>
    <label>Applicant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>