force-app/main/default/objects/LAN_Mapping__c/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <formula>LAN__r.ContractId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract No</label>
    <type>Text</type>
</CustomField>