force-app/main/default/objects/LAN_Mapping__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>Used in Wellness</description>
    <formula>TEXT(LAN__r.ContractEndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Text</type>
</CustomField>