force-app/main/default/objects/LAN_Mapping__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Id with Client_Code__c</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LAN Mappings</relationshipLabel>
    <relationshipName>LAN_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>