force-app/main/default/objects/LAN_Mapping__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <description>This field is used to store the customer of a customer</description>
    <label>Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>