force-app/main/default/objects/LAN_Mapping__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>This field is used to store the type of customer</description>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>