force-app/main/default/objects/LAN_Mapping__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Used in Wellness</description>
    <formula>TEXT(Customer__r.PersonBirthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB</label>
    <type>Text</type>
</CustomField>