force-app/main/default/objects/LAN_Mapping__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>Used in Wellness</description>
    <formula>TEXT(LAN__r.ContractStartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Date</label>
    <type>Text</type>
</CustomField>