force-app/main/default/objects/LAN_Mapping__c/fields/LAN__c.field-meta.xml
<CustomField>
    <fullName>LAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Loan Account Number (Asset) object</description>
    <label>Loan Account Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>LAN Mappings</relationshipLabel>
    <relationshipName>LAN_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>