force-app/main/default/objects/LAN_Mapping__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to LOB Master object</inlineHelpText>
    <label>LOB</label>
    <referenceTo>LOB_Master__c</referenceTo>
    <relationshipLabel>LAN Mappings</relationshipLabel>
    <relationshipName>LAN_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>