force-app/main/default/objects/LAN_Mapping__c/fields/MemberOf__c.field-meta.xml
<CustomField>
    <fullName>MemberOf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Wellness</description>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Member Mapping</relationshipLabel>
    <relationshipName>CustomerMemberMapping</relationshipName>
    <type>Lookup</type>
</CustomField>