force-app/main/default/objects/LAN_Mapping__c/fields/MemberOfText__c.field-meta.xml
<CustomField>
    <fullName>MemberOfText__c</fullName>
    <description>Used in Wellness to link MemberOf__c lookup with correct customer.</description>
    <label>MemberOfText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>