force-app/main/default/objects/LAN_Mapping__c/fields/Old_LAN_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_LAN_Number__c</fullName>
    <description>Text field used to store Old Loan Account Number</description>
    <label>Old Loan Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>