force-app/main/default/objects/LAN_Mapping__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <description>Used in Wellness</description>
    <label>Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>