force-app/main/default/objects/LAN_Mapping__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>